appId: sh.bilal.shellbell
---
- runFlow: 01_terminal.yaml
- tapOn: Switch to reading view
- assertVisible: Switch to terminal grid
- extendedWaitUntil:
    visible: ".*Build complete in 1.4s.*"
    timeout: 30000
- waitForAnimationToEnd
